# micro_blogging

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini
src/microblogging/core/: admin.py  microblogging.drawio
src/microblogging/core/business_logic/dto/: __init__.py  notifications.py  pagination.py  registration.py  tags.py  twits.py
src/microblogging/core/business_logic/services/: __init__.py  authentication.py  common.py  followers.py  profile.py  registration.py  tags.py  twits.py  twits_likes.py  twits_notifications.py  twits_repost.py
src/microblogging/core/bussiness_logic/: exeptions.py
src/microblogging/core/bussiness_logic/dto/: __init__.py  authentication.py  profile.py  registration.py
src/microblogging/core/bussiness_logic/servises/: __init__.py  common.py  (+10 more)
src/microblogging/core/migrations/: 0001_initial.py  0002_add_user_roles.py  0002_emailconfirmationcode.py  0003_add_user_roles.py  0003_alter_profiles_photo.py  0003_profiles_description.py  0004_alter_twits_answer_to_twit.py
src/microblogging/core/models/: __init__.py  base_model.py  email_confirmation_code.py  followers.py  profile.py  tags.py  twits.py  twits_profiles_likes.py  twits_profiles_notifications.py  twits_profiles_reposts.py  twits_tags.py
src/microblogging/core/presentation/: common.py  paginator.py  urls.py  validators.py
src/microblogging/core/templatetags/: add_link.py
src/microblogging/core/tests/: conftest.py  utils.py
src/microblogging/microblogging/: settings.py  urls.py
(+62 files in other folders)
