[tool.poetry]
name = "microblogging"
version = "0.1.0"
description = ""
authors = ["YauheniRoshchanka <roshchenkoevgen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
django = "4.2.4"
dacite = "1.8.1"
python-dotenv = "1.0.0"
psycopg2-binary="2.9.6"
pillow = "10.0.1"
redis = "5.0.0"
hiredis = "2.2.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.0"
flake8 = "6.0.0"
flake8-builtins = "^2.1.0"
flake8-comments = "^0.1.2"
pep8-naming = "^0.13.3"
pre-commit = "^3.3.3"
black = "^23.3.0"
isort = "^5.12.0"

[tool.mypy]
mypy_path = "src/jobboard_app"
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
